--- a/index.html
+++ b/index.html
@@ -153,6 +153,6 @@
       </footer>
     </main>
   </div>
-<script src="oneko.js" data-cat="your-cat-image.png"></script>
+<script src="oneko.js" data-cat="oneko.gif"></script>
 </body>
 </html>
