--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
-  <title>four-net.live</title>
+  <title>fournet</title>
   <meta name="description" content="four-net.live site for fun.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="icon" type="image/png" href="favicon.png">
@@ -81,7 +81,7 @@
           <h1>About four-net.live</h1>
           <div class="meta">Tiny part of the web.</div>
 
-          <p class="about">I'm known for a couple of things but mainly for macros</p>
+          <p class="about">I'm known for a couple of things but mainly for cheating in games lol.</p>
 
           <div style="margin-top:10px">
             <a class="button" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Literal Rickroll</a>
