--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="logo">4N</div>
         <div>
           <div style="font-weight:800;font-size:14px">four-net.live</div>
-          <div style="font-size:11px;color:var(--muted);margin-top:2px">Explore · Connect · Create</div>
+       <!--   <div style="font-size:11px;color:var(--muted);margin-top:2px">Explore · Connect · Create</div> -->
         </div>
       </a>
       <nav>
