--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <aside>
           <div class="panel">
             <h4 style="margin-top:0;font-size:15px">Contact</h4>
-            <p style="color:var(--muted);margin-bottom:6px;font-size:14px">four.net on discord</p>
+            <p style="color:var(--muted);margin-bottom:6px;font-size:14px">four.net on discord & @JFK on google giggles.</p>
            <!-- <h4 style="margin-top:10px;font-size:15px">Social</h4>
             <p style="color:var(--muted);margin:0 0 6px 0;font-size:14px">Twitter / Mastodon / GitHub — links available on the footer.</p> -->
 
