--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             <h4 style="margin-top:10px;font-size:15px">Projects</h4>
             <div class="list">
-              <div>• Lightweight python editor</div>
+              <div>• <a href="https://github.com/mapadah/fournet-pwman">4N Password Manager</a></div>
               <div>• Python Macros</div>
               <div>• Game sites</div>
             </div>
