--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
       h1{font-size:20px}
       .meta,.about{font-size:14px}
     }
+    /* Projects links color */
+    .panel .list a {
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+.panel .list a:hover {
+  text-decoration: underline;
+}
+
   </style>
 </head>
 <body>
