--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
               <div>• Game sites</div>
             </div>
 
-            <h4 style="margin-top:10px;font-size:15px">Quick facts</h4>
+            <h4 style="margin-top:10px;font-size:15px">Socials</h4>
             <div style="display:flex;gap:6px;flex-wrap:wrap;margin-top:6px">
-              <span class="chip">Nice at times</span>
-              <span class="chip">Garbage Internet</span>
-              <span class="chip">Photographer</span>
+              <span class="chip"><a href="https://www.youtube.com/@four-net">Youtube</a></span>
+       <!--       <span class="chip"><a href="https://www.youtube.com/@four-net">Photos</a></span>
+              <span class="chip">Photographer</span> -->
             </div>
           </div>
 
