--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <h4 style="margin-top:10px;font-size:15px">Socials</h4>
             <div style="display:flex;gap:6px;flex-wrap:wrap;margin-top:6px">
-              <span class="chip"><a href="https://www.youtube.com/@four-net">Youtube</a></span>
+              <span class="chip">@four-net on youtube</span>
        <!--       <span class="chip"><a href="https://www.youtube.com/@four-net">Photos</a></span>
               <span class="chip">Photographer</span> -->
             </div>
