--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
-  <title>fournet</title>
+  <title>4n3t</title>
   <meta name="description" content="four-net.live site for fun.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="icon" type="image/png" href="favicon.png">
